[tool.poetry]
name = "continuous-maze-env"
version = "0.1.0"
description = ""
authors = ["melikbugra <melikbugraozcelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.18"
matplotlib = "^3.9.2"
stable-baselines3 = { version = "^2.3.2", extras = ["extra"] }
opencv-python = "^4.10.0.84"
gymnasium = { extras = ["box2d"], version = "^0.28.1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
