[tool.poetry]
name = "continuous-maze-env"
version = "0.1.0"
description = ""
authors = ["melikbugra <melikbugraozcelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyglet = "2.0.18"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
